--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="text/javascript" src="js/jquery.3.1.1.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/jquery.3.1.1.min.js"></script>
-    <title>FB - TECNOLOGIA DA INFORMAÇÃO</title>
+   <title>FB - TECNOLOGIA DA INFORMAÇÃO</title>
   </head>
   <body>
     <header>
