--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="func">
             <img class="icon" src="imagens/Equipe/Naerdson_Barros_(ERP).jpg" />
             <h2 class="icon-título">Naerdson</h2>
-            <p>Analista Pleno</p>
+            <p>Técnico Júnior</p>
           </div>
 
           <div class="func">
@@ -169,7 +169,7 @@
               src="imagens/Equipe/Brunno_Raphael_(Internet).jpg"
             />
             <h2 class="icon-título">Brunno Raphael</h2>
-            <p>Analista Júnior</p>
+            <p>Programador Júnior</p>
           </div>
 
           <div class="func">
@@ -205,7 +205,7 @@
               src="imagens/Equipe/Washington_Silva_(Internet).jpg"
             />
             <h2 class="icon-título">Washington</h2>
-            <p>Analista Júnior</p>
+            <p>Programador Júnior</p>
           </div>
         </section>
 
