--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
   </head>
   <body>
     <header>
-      <img
-        class="logo"
-        src="imagens/logo-colorida.png"
-        alt="Logo Farias Brito"
-      />
-      <div class="ontop"></div>
-    </header>
-    <nav class="navbar">
-      <a href="#" class="nav'-branding"></a>
-      <ul class="nav-menu">
-        <li class="nav-item">
-          <a href="#gerencia" class="nav-link">Gerência</a>
-        </li>
-        <li class="nav-item">
-          <a href="#atendimento" class="nav-link">Atendimento</a>
-        </li>
-        <li class="nav-item">
-          <a href="#erp" class="nav-link">ERP</a>
-        </li>
-        <li class="nav-item">
-          <a href="#internet" class="nav-link">Internet</a>
-        </li>
-        <li class="nav-item">
-          <a href="#operacao" class="nav-link">Operação</a>
-        </li>
-        <li class="nav-item">
-          <a href="#sistemas" class="nav-link">Sistemas</a>
-        </li>
-        <li class="nav-item">
-          <a href="#suporte" class="nav-link">Suporte</a>
-        </li>
-      </ul>
-      <section class="menu-hamb">
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </section>
-    </nav>
+<a href="https://github.com/amandapinto1/fb-ti" target="_blank">
+<img class="logo" src="imagens/logo-colorida.png" alt="Logo Farias Brito" />
+</a>
+<div class="ontop" id="myHeader">
+<div class="progress-bar"></div>
+<nav class="navbar">
+<a href="#" class="nav'-branding"></a>
+<ul class="nav-menu">
+<li class="nav-item">
+<a href="#gerencia" class="nav-link">Gerência</a>
+</li>
+<li class="nav-item">
+<a href="#atendimento" class="nav-link">Atendimento</a>
+</li>
+<li class="nav-item">
+<a href="#erp" class="nav-link">ERP</a>
+</li>
+<li class="nav-item">
+<a href="#internet" class="nav-link">Internet</a>
+</li>
+<li class="nav-item">
+<a href="#operacao" class="nav-link">Operação</a>
+</li>
+<li class="nav-item">
+<a href="#sistemas" class="nav-link">Sistemas</a>
+</li>
+<li class="nav-item">
+<a href="#suporte" class="nav-link">Suporte</a>
+</li>
+</ul>
+<section class="menu-hamb">
+<div class="hamburger">
+<span class="bar"></span>
+<span class="bar"></span>
+<span class="bar"></span>
+</div>
+</section>
+</nav>
+</div>
+</header>
 
     <main>
       <section class="geral">
