--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <img class="logo" src="imagens/logo-colorida.png" alt="Logo Farias Brito" />
 </a>
 <div class="ontop" id="myHeader">
-<div class="progress-bar"></div>
+<div class="progress-bar"></div></div>
 <nav class="navbar">
 <a href="#" class="nav'-branding"></a>
 <ul class="nav-menu">
