--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           <p>Analista Júnior</p>
         </div>
 
+
         <div class="func">
           <img class="icon" src="imagens/Equipe/Claudio_Junior_ERP.png" />
           <h2 class="icon-título">Cláudio Júnior</h2>
@@ -139,8 +140,8 @@
         </div>
 
         <div class="func">
-          <img class="icon" src="imagens/Equipe/Jorge_Luiz_(ERP).jpg" />
-          <h2 class="icon-título">Jorge Luiz</h2>
+          <img class="icon" src="imagens/Equipe/Lukas_Lima(ERP).jpg" />
+          <h2 class=" icon-título">Lukas Lima</h2>
           <p>Estagiário</p>
         </div>
 
